fix: fix errors, change avatar

--- a/rslang/src/app/features/pages/about-team/about-team.component.html
+++ b/rslang/src/app/features/pages/about-team/about-team.component.html
@@ -6,7 +6,7 @@
   </p>
   <mat-card class="member transparent-background">
     <mat-card-title class="member__title background-primary"
-      >Павел Алёшкин<br>
+      >Павел Алешкин<br>
       <a
       href="https://github.com/aleshkinpaul"
       class="member__link"
@@ -23,7 +23,7 @@
       <div class="member__description">
 
         <mat-card-subtitle class="member__subtitle text-primary"
-          >Не выдвигался на оскар, НО:</mat-card-subtitle
+          >Не выдвигался на Оскар, НО:</mat-card-subtitle
         >
         <ul>
           <li>Являюсь тимлидом проекта</li>
