feat: update styles for lists in about-team

--- a/rslang/src/app/features/pages/about-team/about-team.component.html
+++ b/rslang/src/app/features/pages/about-team/about-team.component.html
@@ -25,10 +25,10 @@
         <mat-card-subtitle class="member__subtitle text-primary"
           >Не выдвигался на Оскар, НО:</mat-card-subtitle
         >
-        <ul>
-          <li>Являюсь тимлидом проекта</li>
-          <li>Разработал архитектуру приложения</li>
-          <li>Создал учебник и карточки слов</li>
+        <ul class="member__list">
+          <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Являюсь тимлидом проекта</li>
+          <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Разработал архитектуру приложения</li>
+          <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Создал учебник и карточки слов</li>
         </ul>
       </div>
     </mat-card-content>
@@ -55,10 +55,10 @@
           <mat-card-subtitle class="member__subtitle text-primary"
             >Французам не забивал, НО:</mat-card-subtitle
           >
-          <ul>
-            <li>Настроил работу с сервером</li>
-            <li>Создал игру "Спринт"</li>
-            <li>Разработал компоненты авторизации и статистики</li>
+          <ul class="member__list">
+            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Настроил работу с сервером</li>
+            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Создал игру "Спринт"</li>
+            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Разработал компоненты авторизации и статистики</li>
           </ul>
         </div>
       </mat-card-content>
@@ -84,13 +84,13 @@
           <mat-card-subtitle class="member__subtitle text-primary"
             >Моим именем не назван город на карте, НО:</mat-card-subtitle
           >
-          <ul>
-            <li>Разработала игру "Аудиовызов"</li>
-            <li>
+          <ul class="member__list">
+            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Разработала игру "Аудиовызов"</li>
+            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>
               Создала компоненты главной страницы, меню и
               страницы о команде
             </li>
-            <li>Настроила анимацию и звуковое сопровождение</li>
+            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Настроила анимацию и звуковое сопровождение</li>
           </ul>
         </div>
       </mat-card-content>
