--- a/rslang/src/app/features/pages/learnbook/main/main.component.scss
+++ b/rslang/src/app/features/pages/learnbook/main/main.component.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1vw;
+  gap: 1vmin;
 
   .learnbook-group-list-item {
     list-style: none;
