--- a/rslang/src/app/features/pages/learnbook/word/word.component.html
+++ b/rslang/src/app/features/pages/learnbook/word/word.component.html
@@ -1,1 +1,13 @@
-<p>word works!</p>
+<mat-card class="word-card">
+  <mat-card-title-group>
+    <mat-card-title>{{wordData.word}}</mat-card-title>
+    <mat-card-subtitle><strong>{{wordData.transcription}}</strong> - {{wordData.wordTranslate}}</mat-card-subtitle>
+    <div class="word-card-image-container">
+      <img class="word-card-image" [src]="getImage()">
+    </div>
+  </mat-card-title-group>
+  <mat-card-content>
+    <!-- {{wordData.textMeaning}} (<i>{{wordData.textMeaningTranslate}}</i>)<br>
+    {{wordData.textExample}} (<i>{{wordData.textExampleTranslate}}</i>) -->
+  </mat-card-content>
+</mat-card>
