--- a/rslang/src/app/features/pages/about-team/about-team.component.html
+++ b/rslang/src/app/features/pages/about-team/about-team.component.html
@@ -4,7 +4,7 @@
     Мы не знали друг друга до этого курса <br />
     Болтались по свету, земле и воде
   </p>
-  <mat-card class="member transparent-background">
+  <mat-card class="member transparent-background mat-elevation-z8">
     <mat-card-title class="member__title background-primary"
       >Павел Алешкин<br>
       <a
@@ -34,8 +34,8 @@
     </mat-card-content>
   </mat-card>
 
-    <mat-card class="member transparent-background">
-      <mat-card-title class="member__title background-primary"
+    <mat-card class="member transparent-background mat-elevation-z8">
+      <mat-card-title class="member__title background-primary "
         >Владимир Бессонов<br>
         <a
         href="https://github.com/unbiz"
@@ -52,7 +52,7 @@
         </div>
         <div class="member__description">
 
-          <mat-card-subtitle class="member__subtitle text-primary"
+          <mat-card-subtitle class="member__subtitle text-primary "
             >Французам не забивал, НО:</mat-card-subtitle
           >
           <ul class="member__list">
@@ -63,7 +63,7 @@
         </div>
       </mat-card-content>
     </mat-card>
-    <mat-card class="member transparent-background">
+    <mat-card class="member transparent-background mat-elevation-z8">
       <mat-card-title class="member__title background-primary"
         >Инга Баранец<br>
         <a
