refactor: transform to rem

--- a/rslang/src/app/features/pages/about-team/about-team.component.scss
+++ b/rslang/src/app/features/pages/about-team/about-team.component.scss
@@ -1,5 +1,5 @@
 button {
-  margin-right: 10px;
+  margin-right: 1rem;
 }
 .wrapper {
   padding: 2% 5%;
@@ -8,8 +8,8 @@ button {
 .title {
   text-align: center;
   margin-top: 1%;
-  font-size: 36px;
-  text-shadow: 2px;
+  font-size: 3.6rem;
+  text-shadow: 0.2rem;
   font-style: italic;
   font-weight: bold;
 }
@@ -71,7 +71,7 @@ button {
 
     .member__subtitle {
       text-align: center;
-      font-size: 1.2rem;
+      font-size: 2rem;
       font-style: italic;
     }
   }
