--- a/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.scss
+++ b/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.scss
@@ -13,7 +13,7 @@ mat-sidenav-content{
   min-height: 100vh;
 }
 .wrapper__content{
-  padding-bottom: 2.5rem;
+  padding-bottom: 4rem;
 }
 .settings__toggle{
 margin-right: 2%;
@@ -23,7 +23,7 @@ position: absolute;
 left:0;
 bottom: 0;
 width:100%;
-height:2.5rem;
+height:4rem;
 }
 .chevron-button{
   cursor: pointer;
@@ -38,20 +38,20 @@ height:2.5rem;
 }
 
 .user-name {
-  margin: 0 10px;
+  margin: 0 1rem;
 }
 
 .avatar-image {
-  width: 50px;
-  height: 50px;
-  margin-right: 20px;
+  width: 5rem;
+  height: 5rem;
+  margin-right: 2rem;
   border-radius: 50%;
   display: block;
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0rem 0.3rem 0.1rem -0.2rem rgb(0 0 0 / 20%), 0rem 0.2rem 0.2rem 0rem rgb(0 0 0 / 14%), 0rem 0.1rem 0.5rem 0rem rgb(0 0 0 / 12%);
 }
 h1{
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 0.3rem;
   font-family: 'Leckerli One', cursive;
-  font-size: 48px;
+  font-size: 4.5rem;
 }
