--- a/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.scss
+++ b/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.scss
@@ -19,15 +19,15 @@
       margin-bottom: 2%;
       .indicators__indicator {
         content: '';
-        min-height: 1rem;
-        min-width:1rem;
+        min-height: 1.6rem;
+        min-width:1.6rem;
 
       }
     }
 
     .audio-game__image-wrapper {
       text-align: center;
-      min-height: 80px;
+      min-height: 8rem;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -39,7 +39,7 @@
     }
     .audio-game__start {
       &:hover {
-        box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%),
+        box-shadow: 0px 5 5px -3px rgb(0 0 0 / 20%),
           0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
         opacity: 80%;
       }
@@ -47,7 +47,7 @@
 
     .audio-game__options {
       display: flex;
-      gap: 0.5rem 4%;
+      gap: 0.8rem 4%;
       justify-content: center;
       flex-wrap: wrap;
       margin-top: 2%;
@@ -80,12 +80,12 @@
       margin: auto;
       margin-bottom: 2%;
       border-radius: 4px;
-      border: 4px solid transparent;
+      border: 0.4rem solid transparent;
       &.audio-game__result_wrong {
-        border: 4px solid #e74e5694;
+        border: 0.4rem solid #e74e5694;
       }
       &.audio-game__result_right {
-        border: 4px solid #87eba094;
+        border: 0.4rem solid #87eba094;
       }
     }
     .audio-game__button {
