--- a/rslang/src/app/features/pages/login/login.component.scss
+++ b/rslang/src/app/features/pages/login/login.component.scss
@@ -1,13 +1,13 @@
 .mat-card {
-  max-width: 400px;
-  margin: 40px auto;
+  max-width: 40rem;
+  margin: 4rem auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .mat-card-title {
-  margin-bottom: 30px;
+  margin-bottom: 3rem;
 }
 
 .mat-card-content {
@@ -17,8 +17,8 @@
 }
 
 .mat-form-field {
-  min-width: 240px;
-  margin-bottom: 20px;
+  min-width: 24rem;
+  margin-bottom: 2rem;
 }
 
 .mat-card-actions {
@@ -28,11 +28,11 @@
 }
 
 .error-message {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
 }
 
 .avatar-button {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   overflow: hidden;
 }
 
