--- a/rslang/src/styles.scss
+++ b/rslang/src/styles.scss
@@ -38,7 +38,8 @@ $rslang-theme-dark: mat.define-dark-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%;
+font-size: 10px;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 * {
   scroll-behavior: smooth;
