--- a/rslang/src/app/features/pages/main-page/main-page.component.html
+++ b/rslang/src/app/features/pages/main-page/main-page.component.html
@@ -20,7 +20,7 @@
           style="width:{{ iconDimension }}px;height:{{ iconDimension }}px"
         >
         </lord-icon>
-        <h2>Знакомься!</h2>
+        <h2 class="card__subtitle">Знакомься!</h2>
       </div>
     </mat-card>
     <mat-card class="card__description background-primary mat-elevation-z8" >
@@ -49,7 +49,7 @@
             style="width:{{ iconDimension }}px;height:{{ iconDimension }}px"
           >
           </lord-icon>
-          <h2>{{ card.title }}</h2>
+          <h2 class="card__subtitle">{{ card.title }}</h2>
         </div>
       </mat-card>
       <mat-card class="card__description background-primary mat-elevation-z8" >
