--- a/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.scss
+++ b/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.scss
@@ -1,3 +1,4 @@
+@import './../../../../styles/mixins.scss';
 mat-sidenav{
   height: 100%;
 }
@@ -14,6 +15,9 @@ mat-sidenav-content{
 }
 .wrapper__content{
   padding-bottom: 4rem;
+  @include media-menu-switcher{
+    padding-bottom: 6.5rem;
+    }
 }
 .settings__toggle{
 margin-right: 2%;
@@ -24,6 +28,25 @@ left:0;
 bottom: 0;
 width:100%;
 height:4rem;
+@include media-menu-switcher{
+  height: 6.5rem;
+  }
+}
+.settings__icon{
+  width:2rem;
+  height:2rem;
+  margin-right: 1rem;
+  mat-icon{
+  font-size:3rem;
+  width:2rem;
+  height:2rem;
+  line-height: 2rem;
+
+  }
+&:hover{
+  cursor: pointer;
+  opacity: 0.8;
+}
 }
 .chevron-button{
   cursor: pointer;
@@ -39,6 +62,7 @@ height:4rem;
 
 .user-name {
   margin: 0 1rem;
+  font-size:2rem;
 }
 
 .avatar-image {
