--- a/rslang/src/app/features/pages/games/games.component.scss
+++ b/rslang/src/app/features/pages/games/games.component.scss
@@ -1,8 +1,13 @@
+@import './../../../styles/mixins.scss';
 .button__outer-wrapper {
   padding: 3% 5%;
   width: 40%;
   border-radius: 4px;
   transition: 0.3s ease-in-out;
+  @include media-mobile {
+    margin: auto;
+
+  }
   &:hover{
     cursor: pointer;
     box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
@@ -26,12 +31,6 @@ opacity: 80%;
 .button__icon-wrapper {
   text-align: center;
   padding:5%;
-  // &:first-child{
-  //   animation: animate_grow 2s infinite;
-  // }
-  // &:hover{
-  //   animation: none;
-  // }
 }
 .games-buttons{
 width: 95%;
@@ -40,9 +39,15 @@ margin: auto;
 display: flex;
 justify-content: center;
 padding: 6vh 10vh;
+@include media-mobile {
+  flex-direction: column;
+  gap:2%;
+
+}
 }
 h2{
   color:white;
+  font-size: 2rem;
 }
 @keyframes animate_grow {
 	0% {
