--- a/rslang/src/app/features/pages/login/login.component.html
+++ b/rslang/src/app/features/pages/login/login.component.html
@@ -32,10 +32,10 @@
     </mat-form-field>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button color="primary" (click)="changeMode()">
+    <button mat-button class="mode-button" color="primary" (click)="changeMode()">
       {{ isLoginPage ? 'Страница регистрации' : 'Страница логина'}}
     </button>
-    <button (click)="onSubmit()" mat-raised-button color="primary" [disabled]="form.invalid || submitted">{{
+    <button  class="mode-button" (click)="onSubmit()" mat-raised-button color="primary" [disabled]="form.invalid || submitted">{{
       isLoginPage
       ? 'Войти' :
       'Зарегистрироваться'}}</button>
