fix: remake learnbook routing

--- a/rslang/src/app/features/pages/learnbook/word/word.component.html
+++ b/rslang/src/app/features/pages/learnbook/word/word.component.html
@@ -1,5 +1,5 @@
 <mat-card class="word-card">
-  <mat-card-title-group>
+  <mat-card-title-group class="word-card-title-group">
     <mat-card-title>{{wordData.word}}</mat-card-title>
     <mat-card-subtitle><strong>{{wordData.transcription}}</strong> - {{wordData.wordTranslate}}</mat-card-subtitle>
     <div class="word-card-image-container">
@@ -7,7 +7,6 @@
     </div>
   </mat-card-title-group>
   <mat-card-content>
-    <!-- {{wordData.textMeaning}} (<i>{{wordData.textMeaningTranslate}}</i>)<br>
-    {{wordData.textExample}} (<i>{{wordData.textExampleTranslate}}</i>) -->
+    <!-- {{wordData.texcdtExample}} (<i>{{wordData.textExampleTranslate}}</i>) -->
   </mat-card-content>
 </mat-card>
