--- a/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.scss
+++ b/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.scss
@@ -33,16 +33,16 @@ height:4rem;
   }
 }
 .settings__icon{
-  width:2rem;
-  height:2rem;
-  margin-right: 1rem;
-  mat-icon{
-  font-size:3rem;
-  width:2rem;
-  height:2rem;
-  line-height: 2rem;
+  // width:2rem;
+  // height:2rem;
+  // margin-right: 1rem;
+  // mat-icon{
+  // font-size:3rem;
+  // width:2rem;
+  // height:2rem;
+  // line-height: 2rem;
 
-  }
+  // }
 &:hover{
   cursor: pointer;
   opacity: 0.8;
@@ -77,5 +77,5 @@ h1{
   text-transform: uppercase;
   letter-spacing: 0.3rem;
   font-family: 'Leckerli One', cursive;
-  font-size: 4.5rem;
+  font-size: 3.5rem;
 }
