--- a/rslang/src/app/features/pages/main-page/main-page.component.scss
+++ b/rslang/src/app/features/pages/main-page/main-page.component.scss
@@ -2,6 +2,10 @@
 .example-stretched-tabs {
   width: 100%;
 }
+lord-icon{
+  width:80%;
+  height:80%;
+}
 .title {
   text-align: center;
   margin-top: 1%;
