--- a/rslang/src/app/shared/components/resulting-page/resulting-page.component.html
+++ b/rslang/src/app/shared/components/resulting-page/resulting-page.component.html
@@ -1,5 +1,5 @@
 <div class="overlay">
-  <mat-card class="modal mat-app-background">
+  <mat-card class="modal mat-app-background"  @enterLeave>
   <div class="modal__close">
     <mat-icon color="primary" (click)="closeResults()">cancel</mat-icon>
   </div>
