feat: add sounds

--- a/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.html
+++ b/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.html
@@ -123,3 +123,4 @@
     <app-footer class="footer-bar"></app-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
+<audio src="" id="soundPlayer" *ngIf="isSound"></audio>
